--- a/animators/inner.html
+++ b/animators/inner.html
@@ -224,7 +224,7 @@
                             </div>
                             <div class="questions__form-col">
                                 <textarea rows="4" placeholder="Расскажите о ваших пожеланиях" type="textarea" name="message"></textarea>
-                                <input class="button small-btn violet-btn open__thx" type="submit" value="Заказать праздник">
+                                <button class="button small-btn violet-btn open__thx" type="submit">Заказать праздник</button>
                             </div>
                         </form>
                     </div>
