--- a/animators/persomages.html
+++ b/animators/persomages.html
@@ -87,14 +87,14 @@
             <img src="img/all-b.png"class="personages__bg-b" alt="Фон">
             <img class="find__bg1" src="img/confeti1.png" alt="Фон">
             <img class="find__bg2" src="img/confeti1.png" alt="Фон">
-            <div class="section__title nomt">
-                <div class="section__titles white">
-                    <img class="section__title-bg section__drop section__drop-l" src="img/drop-l.png" alt="Фон">
-                    <h2>Выберите персонажа</h2>
-                    <img class="section__title-bg section__drop section__drop-r" src="img/drop-r.png" alt="Фон">
-                </div>
-            </div>
             <div class="container">
+                <div class="section__title">
+                    <div class="section__titles white">
+                        <img class="section__title-bg section__drop section__drop-l" src="img/drop-l.png" alt="Фон">
+                        <h2>Выберите персонажа</h2>
+                        <img class="section__title-bg section__drop section__drop-r" src="img/drop-r.png" alt="Фон">
+                    </div>
+                </div>
                 <div class="section__elements nomt">
                     <div class="section__personage">
                         <img class="section__personage-stars" src="img/stars-bg.png" alt="звездочки">
@@ -322,7 +322,7 @@
                             </div>
                             <div class="questions__form-col">
                                 <textarea rows="4" placeholder="Расскажите о ваших пожеланиях" type="textarea" name="message"></textarea>
-                                <input class="button small-btn violet-btn open__thx" type="submit" value="Заказать праздник">
+                                <button class="button small-btn violet-btn open__thx" type="submit">Заказать праздник</button>
                             </div>
                         </form>
                     </div>
