--- a/animators/reviews.html
+++ b/animators/reviews.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
     <title>Детские праздники под ключ</title>
-</head> 
+</head>
 <body>
     <header class="header">
         <div class="container">
@@ -82,66 +82,125 @@
                 </div>
             </div>
         </section>
-        <section class="gallery">
-            <img src="img/gallery-bg.png" class="gallery__bg" alt="Фон">
-            <div class="gallery__container">
-                <div class="section__title">
+        <section class="replies">
+            <img class="replies__bg-t" src="img/reply-t.png" alt="Фон">
+            <img class="replies__bg-b" src="img/reply-b.png" alt="Фон">
+            <div class="container">
+                <div class="section__title nomt">
                     <div class="section__titles white">
                         <img class="section__title-bg section__drop section__drop-l" src="img/drop-l.png" alt="Фон">
-                        <h2>Как проходят детские праздники у нас</h2>
+                        <h2>О нас пишут</h2>
                         <img class="section__title-bg section__drop section__drop-r" src="img/drop-r.png" alt="Фон">
                     </div>
                 </div>
-                <div class="review__photos">
-                    <div class="review__photo"><img src="img/photo2.png" alt="Отзыв"></div>
-                    <div class="review__photo"><img src="img/photo3.png" alt="Отзыв"></div>
-                    <div class="review__photo"><img src="img/photo4.png" alt="Отзыв"></div>
-                    <div class="review__photo"><img src="img/photo5.png" alt="Отзыв"></div>
-                    <div class="review__photo"><img src="img/photo1.png" alt="Отзыв"></div>
-                    <div class="review__photo"><img src="img/photo6.png" alt="Отзыв"></div>
-                </div>
-            </div>
-        </section>
-        <section class="lookatus">
-            <div class="container">
-                <div class="section__title">
-                    <div class="section__titles violet">
-                        <img class="section__title-bg section__drop section__drop-l" src="img/drop-l.png" alt="Фон">
-                        <h2>Поссмотрите, как проходят детские праздники у нас</h2>
-                        <img class="section__title-bg section__drop section__drop-r" src="img/drop-r.png" alt="Фон">
-                    </div>
-                </div>
-                <div class="review__swiper-wrap">
-                    <div class="review__swiper">
-                        <div class="swiper-wrapper">
-                            <div class="swiper-slide">
-                                <div class="review__slide">
-                                    <img src="img/review1.png" alt="Фото отзыва">
-                                    <img src="img/review2.png" alt="Фото отзыва">
-                                    <img src="img/review3.png" alt="Фото отзыва">
-                                    <img src="img/review4.png" alt="Фото отзыва">
-                                </div>
+                <div class="replies__slider">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="replies__review">
+                                <img src="img/reply.png" alt="Отзыв" class="replies__review-img">
                             </div>
-                            <div class="swiper-slide">
-                                <div class="review__slide">
-                                    <img src="img/review1.png" alt="Фото отзыва">
-                                    <img src="img/review2.png" alt="Фото отзыва">
-                                    <img src="img/review3.png" alt="Фото отзыва">
-                                    <img src="img/review4.png" alt="Фото отзыва">
-                                </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="replies__review">
+                                <img src="img/reply.png" alt="Отзыв" class="replies__review-img">
                             </div>
-                            <div class="swiper-slide">
-                                <div class="review__slide">
-                                    <img src="img/review1.png" alt="Фото отзыва">
-                                    <img src="img/review2.png" alt="Фото отзыва">
-                                    <img src="img/review3.png" alt="Фото отзыва">
-                                    <img src="img/review4.png" alt="Фото отзыва">
-                                </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="replies__review">
+                                <img src="img/reply.png" alt="Отзыв" class="replies__review-img">
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="replies__review">
+                                <img src="img/reply.png" alt="Отзыв" class="replies__review-img">
                             </div>
                         </div>
                     </div>
-                    <a href="#" class="swiper-btn review__prev"><img src="img/slider-arrow-l.png" alt="Стрелка слайдера"></a>
-                    <a href="#" class="swiper-btn review__next"><img src="img/slider-arrow-r.png" alt="Стрелка слайдера"></a>
+                    <a href="#" class="swiper-btn replies__prev"><img src="img/slider-arrow-l.png" alt="Стрелка слайдера"></a>
+                    <a href="#" class="swiper-btn replies__next"><img src="img/slider-arrow-r.png" alt="Стрелка слайдера"></a>
+                    <div class="replies__pagination"></div>
+                </div>
+                <div class="replies__grid">
+                    <div class="replies__item">
+                        <div class="replies__item-head">
+                            <div class="replies__item-img"><img src="" alt=""></div>
+                            <div class="replies__item-title">
+                            </div>
+                        </div>
+                        <div class="replies__item-body">
+                            <img src="img/review1.png" alt="">
+                        </div>
+                    </div>
+                    <div class="replies__item">
+                        <div class="replies__item-head">
+                            <div class="replies__item-img"><img src="img/reply-ico.png" alt=""></div>
+                            <div class="replies__item-title">
+                                <h3>Анечка Гриневич</h3>
+                                <p>22.06.2020</p>
+                            </div>
+                        </div>
+                        <div class="replies__item-body">
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea sint, nam corporis ad commodi reiciendis cupiditate reprehenderit veniam alias omnis nostrum officia ipsa quam totam consectetur quia dignissimos vel repellendus quidem voluptatum numquam. Ipsum, quis! Cum pariatur sit quo, aliquid tempora fuga eaque, maxime porro labore, enim accusamus. Odit, suscipit!</p>
+                        </div>
+                    </div>
+                    <div class="replies__item">
+                        <div class="replies__item-head">
+                            <div class="replies__item-img"><img src="" alt=""></div>
+                            <div class="replies__item-title">
+                            </div>
+                        </div>
+                        <div class="replies__item-body">
+                            <img src="img/review4.png" alt="">
+                        </div>
+                    </div>
+                    <div class="replies__item">
+                        <div class="replies__item-head">
+                            <div class="replies__item-img"><img src="img/reply-ico.png" alt=""></div>
+                            <div class="replies__item-title">
+                                <h3>Анечка Гриневич</h3>
+                                <p>22.06.2020</p>
+                            </div>
+                        </div>
+                        <div class="replies__item-body">
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea sint, nam corporis ad commodi reiciendis cupiditate reprehenderit veniam alias omnis nostrum officia ipsa quam totam consectetur quia dignissimos vel repellendus quidem voluptatum numquam. Ipsum, quis! Cum pariatur sit quo, aliquid tempora fuga eaque, maxime porro labore, enim accusamus. Odit, suscipit!</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="section__programs-btn-wrap">
+                    <a href="#" class="button transp-btn big-btn white"><img src="img/book-ico.png" alt="Иконка маски"> Смотреть все отзывы</a>
+                </div>
+                <div class="section__title">
+                    <div class="section__titles white">
+                        <img class="section__title-bg section__drop section__drop-l" src="img/drop-l.png" alt="Фон">
+                        <h2>Видеоотзывы</h2>
+                        <img class="section__title-bg section__drop section__drop-r" src="img/drop-r.png" alt="Фон">
+                    </div>
+                </div>
+                <div class="replies__videos">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="replies__video">
+                                <img src="img/review2.png" alt="Видео">
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="replies__video">
+                                <img src="img/review3.png" alt="Видео">
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="replies__video">
+                                <img src="img/review2.png" alt="Видео">
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="replies__video">
+                                <img src="img/review3.png" alt="Видео">
+                            </div>
+                        </div>
+                    </div>
+                    <a href="#" class="swiper-btn replies-video__prev"><img src="img/slider-arrow-l.png" alt="Стрелка слайдера"></a>
+                    <a href="#" class="swiper-btn replies-video__next"><img src="img/slider-arrow-r.png" alt="Стрелка слайдера"></a>
                 </div>
             </div>
         </section>
@@ -154,28 +213,11 @@
                     <div class="section__title">
                         <img class="section__title-bg section__arrow section__arrow-r" src="img/arrow-r.png" alt="Фон">
                         <div class="section__titles dark">
-                            <h2>Хочу такой же праздник!</h2>
+                            <h2>Оставьте свой отзыв</h2>
                         </div>
                         <img class="section__title-bg section__arrow section__arrow-l" src="img/arrow-l.png" alt="Фон">
                     </div>
-                    <div class="questions__contacts">
-                        <h4 class="dark">Звоните, расскажем по телефону:</h4>
-                        <div class="questions__links">
-                            <a href="tel:+7(999) 985-08-82" class="questions__tel"><img src="img/phone-png.png" alt="Иконка телефона">+7(999) 985-08-82</a>
-                            <div class="footer__round-links">
-                                <a href="#" class="questions__link">
-                                    <img src="img/wa.png" alt="Иконка Вотсап"></a>
-                                <a href="#" class="questions__link header__social-link">
-                                    <i class="fa fa-vk"></i>
-                                </a>
-                                <a href="#" class="questions__link header__social-link">
-                                    <i class="fa fa-instagram"></i>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
                     <div class="questions__form-wrap blog__form">
-                        <h4 class="questions__form-title dark">Или отправьте нам сообщение:</h4>
                         <form class="questions__form">
                             <div class="questions__form-col">
                                 <input placeholder="Имя" type="text" name="name">
@@ -214,6 +256,56 @@
                         <img class="about__img" src="img/kids.png" alt="">
                     </div>
                     <a href="#" class="button small-btn transp-btn violet about__btn"><img src="img/p-cacke-ico.png" alt="Тортик">Развернуть</a>
+                </div>
+            </div>
+        </section>
+        <section class="section questions articles_overflow">
+            <img src="img/q1.png" alt="Иконка" class="questions__animate questions__item1">
+            <img src="img/q2.png" alt="Иконка" class="questions__animate questions__item2">
+            <img src="img/q3.png" alt="Иконка" class="questions__animate questions__item3">
+            <div class="container">
+                <div class="section__wrap">
+                    <div class="section__title">
+                        <img class="section__title-bg section__arrow section__arrow-r" src="img/arrow-r.png" alt="Фон">
+                        <div class="section__titles dark">
+                            <h2>Заказать персонажа!</h2>
+                        </div>
+                        <img class="section__title-bg section__arrow section__arrow-l" src="img/arrow-l.png" alt="Фон">
+                    </div>
+                    
+                    <div class="questions__contacts">
+                        <h4 class="dark">Звоните, расскажем по телефону:</h4>
+                        <div class="questions__links">
+                            <a href="tel:+7(999) 985-08-82" class="questions__tel"><img src="img/phone-png.png" alt="Иконка телефона">+7(999) 985-08-82</a>
+                            <div class="footer__round-links">
+                                <a href="#" class="questions__link">
+                                    <img src="img/wa.png" alt="Иконка Вотсап"></a>
+                                <a href="#" class="questions__link header__social-link">
+                                    <i class="fa fa-vk"></i>
+                                </a>
+                                <a href="#" class="questions__link header__social-link">
+                                    <i class="fa fa-instagram"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="questions__form-wrap blog__form">
+                        <h4 class="questions__form-title dark">Или отправьте нам сообщение:</h4>
+                        <form class="questions__form">
+                            <div class="questions__form-col">
+                                <input placeholder="Имя" type="text" name="name">
+                                <input placeholder="Телефон" type="tel" name="tel">
+                                <p>
+                                    Нажимая кнопку, вы соглашаетесь
+                                    на передачу и хранение персональных данных
+                                </p>
+                            </div>
+                            <div class="questions__form-col">
+                                <textarea rows="4" placeholder="Расскажите о ваших пожеланиях" type="textarea" name="message"></textarea>
+                                <button class="button small-btn violet-btn open__thx" type="submit">Заказать праздник</button>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
         </section>
