--- a/animators/animators.html
+++ b/animators/animators.html
@@ -248,7 +248,7 @@
                                             </div>
                                             <div class="questions__form-col">
                                                 <input placeholder="Телефон" type="tel" name="tel">
-                                                <input class="button small-btn violet-btn open__thx" type="submit" value="Заказать праздник">
+                                                <button class="button small-btn violet-btn open__thx" type="submit">Заказать праздник</button>
                                             </div>
                                         </form>
                                     </div>
@@ -365,7 +365,7 @@
                             </div>
                             <div class="questions__form-col">
                                 <textarea rows="4" placeholder="Расскажите о ваших пожеланиях" type="textarea" name="message"></textarea>
-                                <input class="button small-btn violet-btn open__thx" type="submit" value="Заказать праздник">
+                                <button class="button small-btn violet-btn open__thx" type="submit">Заказать праздник</button>
                             </div>
                         </form>
                     </div>
