--- a/animators/index.html
+++ b/animators/index.html
@@ -16,7 +16,7 @@
             <div class="header__wrap">
                 <a href="#" class="header__burger"><span></span></a>
                 <div class="header__logo">
-                    <img src="img/logo.gif" alt="Логотип" class="header__logo-img">
+                    <a href="/animators/index.html"><img src="img/logo.gif" alt="Логотип" class="header__logo-img"></a>
                     <p class="header__logo-text">Организация детских праздников в Москве и МО</p>
                 </div>
                 <a href="#" class="header__mobile-tel open__yellow"><img src="img/phone-png.png" alt="Иконка телефона"></a>
@@ -83,7 +83,7 @@
                                     <span class="banner__amount">123</span>
                                     <p>персонажа в нашем<br>каталоге</p>
                                 </div>
-                                <a href="#" class="button big-btn violet-btn banner__button open__violet"><img src="img/hat.png" alt="Иконка шляпы">Заказать персонажа</a>
+                                <a href="/animators/animators.html" class="button big-btn violet-btn banner__button"><img src="img/hat.png" alt="Иконка шляпы">Заказать персонажа</a>
                             </div>
                         </div>
                     </div>
@@ -101,7 +101,7 @@
                                     <span class="banner__amount">23</span>
                                     <p>программы в нашем<br>каталоге</p>
                                 </div>
-                                <a href="#" class="button big-btn violet-btn banner__button open__violet"><img src="img/hat.png" alt="Иконка шляпы">Выбрать программу</a>
+                                <a href="/animators/bundles.html" class="button big-btn violet-btn banner__button open__violet"><img src="img/hat.png" alt="Иконка шляпы">Выбрать программу</a>
                             </div>
                         </div>
                     </div>
@@ -119,7 +119,7 @@
                                     <span class="banner__amount">123</span>
                                     <p>персонажа в нашем<br>каталоге</p>
                                 </div>
-                                <a href="#" class="button big-btn violet-btn banner__button open__violet"><img src="img/hat.png" alt="Иконка шляпы">Заказать персонажа</a>
+                                <a href="/animators/online.html" class="button big-btn violet-btn banner__button open__violet"><img src="img/hat.png" alt="Иконка шляпы">Заказать персонажа</a>
                             </div>
                         </div>
                     </div>
@@ -1319,7 +1319,7 @@
             <img src="img/confeti.png" alt="Фон" class="popup__confeti">
             <a href="#" class="popup__close"><i class="fa fa-times"></i></a>
             <div class="section__title">
-                <div class="section__titles violet">
+                <div class="section__titles white">
                     <img class="section__title-bg section__drop section__drop-l" src="img/drop-l.png" alt="Фон">
                     <h2>Оставить отзыв</h2>
                     <img class="section__title-bg section__drop section__drop-r" src="img/drop-r.png" alt="Фон">
