--- a/animators/index.html
+++ b/animators/index.html
@@ -17,7 +17,7 @@
             <div class="header__wrap">
                 <a href="#" class="header__burger"><span></span></a>
                 <div class="header__logo">
-                    <a href="/animators/index.html"><img src="img/logo.gif" alt="Логотип" class="header__logo-img"></a>
+                    <a href="/animators/index.html" class="header__logo-index"><img src="img/logo.gif" alt="Логотип" class="header__logo-img"></a>
                     <p class="header__logo-text">Организация детских праздников в Москве и МО</p>
                 </div>
                 <a href="#" class="header__mobile-tel open__yellow"><img src="img/phone-png.png" alt="Иконка телефона"></a>
