--- a/animators/reviews.html
+++ b/animators/reviews.html
@@ -93,35 +93,45 @@
                         <img class="section__title-bg section__drop section__drop-r" src="img/drop-r.png" alt="Фон">
                     </div>
                 </div>
-                <div class="replies__slider">
-                    <div class="swiper-wrapper">
-                        <div class="swiper-slide">
-                            <div class="replies__review">
-                                <img src="img/reply.png" alt="Отзыв" class="replies__review-img">
+                <div class="replies__slider-wrap">
+                    <img src="img/arrow-crown.png" alt="" class="replies__slider-img replies__slider-img1">
+                    <img src="img/blue-baloon.png" alt="" class="replies__slider-img replies__slider-img2">
+                    <img src="img/q2.png" alt="" class="replies__slider-img replies__slider-img3">
+                    <img src="img/d2.png" alt="" class="replies__slider-img replies__slider-img4">
+                    <img src="img/d7.png" alt="" class="replies__slider-img replies__slider-img5">
+                    <img src="img/d5.png" alt="" class="replies__slider-img replies__slider-img6">
+                    <div class="replies__slider">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <div class="replies__review">
+                                    <img src="img/reply.png" alt="Отзыв" class="replies__review-img">
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="replies__review">
+                                    <img src="img/reply.png" alt="Отзыв" class="replies__review-img">
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="replies__review">
+                                    <img src="img/reply.png" alt="Отзыв" class="replies__review-img">
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="replies__review">
+                                    <img src="img/reply.png" alt="Отзыв" class="replies__review-img">
+                                </div>
                             </div>
                         </div>
-                        <div class="swiper-slide">
-                            <div class="replies__review">
-                                <img src="img/reply.png" alt="Отзыв" class="replies__review-img">
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="replies__review">
-                                <img src="img/reply.png" alt="Отзыв" class="replies__review-img">
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="replies__review">
-                                <img src="img/reply.png" alt="Отзыв" class="replies__review-img">
-                            </div>
-                        </div>
+                        <a href="#" class="swiper-btn replies__prev"><img src="img/slider-arrow-l.png" alt="Стрелка слайдера"></a>
+                        <a href="#" class="swiper-btn replies__next"><img src="img/slider-arrow-r.png" alt="Стрелка слайдера"></a>
+                        <div class="replies__pagination"></div>
                     </div>
-                    <a href="#" class="swiper-btn replies__prev"><img src="img/slider-arrow-l.png" alt="Стрелка слайдера"></a>
-                    <a href="#" class="swiper-btn replies__next"><img src="img/slider-arrow-r.png" alt="Стрелка слайдера"></a>
-                    <div class="replies__pagination"></div>
                 </div>
                 <div class="replies__grid">
                     <div class="replies__item">
+                        <img src="img/baloons-ico.png" alt="" class="replies__item-baloons">
+                        <img src="img/d3-ico.png" alt="" class="replies__item-d3">
                         <div class="replies__item-head">
                             <div class="replies__item-img"><img src="" alt=""></div>
                             <div class="replies__item-title">
@@ -132,6 +142,10 @@
                         </div>
                     </div>
                     <div class="replies__item">
+                        <img src="img/like.png" alt="" class="replies__item-item replies__item-item1">
+                        <img src="img/confeti1.png" alt="" class="replies__item-item replies__item-item11">
+                        <img src="img/baloons-ico.png" alt="" class="replies__item-baloons">
+                        <img src="img/d3-ico.png" alt="" class="replies__item-d3">
                         <div class="replies__item-head">
                             <div class="replies__item-img"><img src="img/reply-ico.png" alt=""></div>
                             <div class="replies__item-title">
@@ -144,6 +158,10 @@
                         </div>
                     </div>
                     <div class="replies__item">
+                        <img src="img/like.png" alt="" class="replies__item-item replies__item-item2">
+                        <img src="img/confeti2.png" alt="" class="replies__item-item replies__item-item21">
+                        <img src="img/baloons-ico.png" alt="" class="replies__item-baloons">
+                        <img src="img/d3-ico.png" alt="" class="replies__item-d3">
                         <div class="replies__item-head">
                             <div class="replies__item-img"><img src="" alt=""></div>
                             <div class="replies__item-title">
@@ -154,6 +172,9 @@
                         </div>
                     </div>
                     <div class="replies__item">
+                        <img src="img/like.png" alt="" class="replies__item-item replies__item-item3">
+                        <img src="img/baloons-ico.png" alt="" class="replies__item-baloons">
+                        <img src="img/d3-ico.png" alt="" class="replies__item-d3">
                         <div class="replies__item-head">
                             <div class="replies__item-img"><img src="img/reply-ico.png" alt=""></div>
                             <div class="replies__item-title">
