--- a/animators/contacts.html
+++ b/animators/contacts.html
@@ -16,30 +16,30 @@
             <div class="header__wrap">
                 <a href="#" class="header__burger"><span></span></a>
                 <div class="header__logo">
-                    <img src="img/logo.gif" alt="Логотип" class="header__logo-img">
+                    <a href="/animators/index.html" class="header__logo-index"><img src="img/logo.gif" alt="Логотип" class="header__logo-img"></a>
                     <p class="header__logo-text">Организация детских праздников в Москве и МО</p>
                 </div>
-                <a href="#" class="header__mobile-tel"><img src="img/phone-png.png" alt="Иконка телефона"></a>
+                <a href="#" class="header__mobile-tel open__yellow"><img src="img/phone-png.png" alt="Иконка телефона"></a>
                 <div class="header__menu">
                     <nav class="header__nav">
                         <ul>
                             <li>
-                                <a href="/" class="header__link">Наши услуги</a>
+                                <a href="/animators/bundles.html" class="header__link">Наши услуги</a>
                             </li>
                             <li>
-                                <a href="/" class="header__link">Персонажи</a>
+                                <a href="/animators/persomages.html" class="header__link">Персонажи</a>
+                            </li>
+                            <li class="active">
+                                <a href="/animators/packets.html" class="header__link">Цены</a>
                             </li>
                             <li>
-                                <a href="/" class="header__link">Цены</a>
+                                <a href="/animators/gallery.html" class="header__link">Фото и видео</a>
                             </li>
                             <li>
-                                <a href="/" class="header__link">Фото и видео</a>
+                                <a href="/animators/reviews.html" class="header__link">Отзывы</a>
                             </li>
                             <li>
-                                <a href="/" class="header__link">Отзывы</a>
-                            </li>
-                            <li>
-                                <a href="/contacts.html" class="header__link">Контакты</a>
+                                <a href="/animators/contacts.html" class="header__link">Контакты</a>
                             </li>
                         </ul>
                     </nav>
@@ -63,11 +63,12 @@
                         </div>
                         <a href="tel:+79999850882" class="header__tel">+7 (999) 985-08-82</a>
                     </div>
-                    <a href="#" class="button yellow-btn small-btn header__recall"><img src="img/phone-png.png" alt="Иконка телефона">Заказать звонок</a>
+                    <a href="#" class="button yellow-btn small-btn header__recall open__yellow"><img src="img/phone-png.png" alt="Иконка телефона">Заказать звонок</a>
                 </div>
             </div>
-        </div>
+        </div> 
     </header>
+    <div class="header__mobile"></div>
     <main class="main nomt">
         <section class="breadcrumbs">
             <div class="container">
