--- a/animators/bundles.html
+++ b/animators/bundles.html
@@ -16,7 +16,7 @@
             <div class="header__wrap">
                 <a href="#" class="header__burger"><span></span></a>
                 <div class="header__logo">
-                    <a href="/animators/index.html"><img src="img/logo.gif" alt="Логотип" class="header__logo-img"></a>
+                    <a href="/animators/index.html" class="header__logo-index"><img src="img/logo.gif" alt="Логотип" class="header__logo-img"></a>
                     <p class="header__logo-text">Организация детских праздников в Москве и МО</p>
                 </div>
                 <a href="#" class="header__mobile-tel open__yellow"><img src="img/phone-png.png" alt="Иконка телефона"></a>
@@ -66,8 +66,9 @@
                     <a href="#" class="button yellow-btn small-btn header__recall open__yellow"><img src="img/phone-png.png" alt="Иконка телефона">Заказать звонок</a>
                 </div>
             </div>
-        </div>
+        </div> 
     </header>
+    <div class="header__mobile"></div>
     <main class="main nomt">
         <section class="breadcrumbs">
             <div class="container">
