--- a/animators/celebration.html
+++ b/animators/celebration.html
@@ -177,35 +177,61 @@
                     <div class="review__photo"><img src="img/photo6.png" alt=""></div>
                 </div>
                 <div class="section__programs-btn-wrap mb">
-                    <a href="#" class="button transp-btn big-btn violet">Сотреть все фото</a>
+                    <a href="#" class="button transp-btn big-btn violet">Смотреть все фото</a>
                 </div>
                 <div class="section__title">
                     <div class="section__titles violet">
                         <img class="section__title-bg section__drop section__drop-l" src="img/drop-l.png" alt="Фон">
-                        <h2>Видеопоздравления</h2>
+                        <h2>Видео c праздника</h2>
                         <img class="section__title-bg section__drop section__drop-r" src="img/drop-r.png" alt="Фон">
                     </div>
                 </div>
                 <div class="examples__wrap">
                     <img src="img/videos-bg.png" alt="Фон" class="examples__bg">
-                    <div class="examples__videos">
-                        <div class="examples__video">
-                            <img src="img/review2.png" alt="Видеоотзыв">
-                            <h4 class="examples__caption">Фокусник онлайн</h4>
-                        </div>
-                        <div class="examples__video">
-                            <img src="img/review2.png" alt="Видеоотзыв"> 
-                            <h4 class="examples__caption">Фокусник онлайн</h4>
-                        </div>
-                        <div class="examples__video">
-                            <img src="img/review2.png" alt="Видеоотзыв">
-                            <h4 class="examples__caption">Фокусник онлайн</h4>
-                        </div>
-                        <div class="examples__video">
-                            <img src="img/review2.png" alt="Видеоотзыв">
-                            <h4 class="examples__caption">Фокусник онлайн</h4>
+                    <div class="examples__slider">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <div class="examples__video">
+                                    <img src="img/review2.png" alt="Видеоотзыв">
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="examples__video">
+                                    <img src="img/review2.png" alt="Видеоотзыв">
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="examples__video">
+                                    <img src="img/review2.png" alt="Видеоотзыв">
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="examples__video">
+                                    <img src="img/review2.png" alt="Видеоотзыв">
+                                </div>
+                            </div>
                         </div>
                     </div>
+                    <a href="#" class="swiper-btn examples-prev"><img src="img/slider-arrow-l.png" alt="Стрелка слайдера"></a>
+                    <a href="#" class="swiper-btn examples-next"><img src="img/slider-arrow-r.png" alt="Стрелка слайдера"></a>
+                </div>
+                <div class="section__title">
+                    <div class="section__titles violet">
+                        <img class="section__title-bg section__drop section__drop-l" src="img/drop-l.png" alt="Фон">
+                        <h2>Ваши отзывы о нашей работе</h2>
+                        <img class="section__title-bg section__drop section__drop-r" src="img/drop-r.png" alt="Фон">
+                    </div>
+                </div>
+                <div class="reviews__content">
+                    <div class="reviews__review">
+                        <img src="img/review4.png" alt="Отзыв">
+                    </div>
+                    <div class="reviews__review">
+                        <img src="img/review1.png" alt="Отзыв">
+                    </div>
+                </div>
+                <div class="section__programs-btn-wrap">
+                    <a href="#" class="button transp-btn big-btn violet"><img src="img/book-ico.png" alt="Иконка маски">Смотреть все отзывы</a>
                 </div>
             </div>
         </section>
@@ -216,11 +242,11 @@
             <div class="container">
                 <div class="section__wrap">
                     <div class="section__title">
-                        <img class="section__title-bg section__arrow" src="img/arrow-r.png" alt="Фон">
+                        <img class="section__title-bg section__arrow section__arrow-r" src="img/arrow-r.png" alt="Фон">
                         <div class="section__titles dark">
                             <h2>Хочу такой же праздник!</h2>
                         </div>
-                        <img class="section__title-bg section__arrow" src="img/arrow-l.png" alt="Фон">
+                        <img class="section__title-bg section__arrow section__arrow-l" src="img/arrow-l.png" alt="Фон">
                     </div>
                     <div class="questions__contacts">
                         <h4 class="dark">Звоните, расскажем по телефону:</h4>
